[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/images/gui/taskmenu/jobgui.png" type="Texture" id=1]
[ext_resource path="res://files/scenes/Options.gd" type="Script" id=2]
[ext_resource path="res://assets/themes/Checkbox&Tabs.tres" type="Theme" id=3]
[ext_resource path="res://assets/images/gui/universal/tabpanel.png" type="Texture" id=6]
[ext_resource path="res://assets/images/gui/text scene/textbutton.png" type="Texture" id=7]
[ext_resource path="res://assets/images/gui/text scene/textbuttonpressed.png" type="Texture" id=8]
[ext_resource path="res://assets/images/gui/text scene/textbuttonhl.png" type="Texture" id=9]
[ext_resource path="res://files/gui/options/hotkey_line.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/themes/options_hotkey.tres" type="Theme" id=11]
[ext_resource path="res://assets/images/gui/menu/confirmpanel.png" type="Texture" id=12]

[node name="Options" type="TextureRect"]
margin_right = 649.0
margin_bottom = 788.0
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="TabContainer" type="TabContainer" parent="."]
margin_left = 29.0
margin_top = 99.0
margin_right = 616.0
margin_bottom = 668.0
theme = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_bg = Color( 0, 0, 0, 1 )
custom_colors/font_color_fg = Color( 0, 0, 0, 1 )

[node name="Audio" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 34.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Audio"]
margin_left = 40.0
margin_top = 45.0
margin_right = 453.0
margin_bottom = 191.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="master" type="Control" parent="TabContainer/Audio/VBoxContainer"]
margin_right = 413.0
margin_bottom = 82.0
rect_min_size = Vector2( 0, 82 )

[node name="Label" type="Label" parent="TabContainer/Audio/VBoxContainer/master"]
margin_right = 184.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MASTERSOUND"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="TabContainer/Audio/VBoxContainer/master"]
margin_top = 54.0
margin_right = 413.0
margin_bottom = 82.0
min_value = -40.0
max_value = 0.0
value = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="TabContainer/Audio/VBoxContainer/master"]
margin_left = 446.0
margin_top = 44.0
margin_right = 490.0
margin_bottom = 88.0
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music" type="Control" parent="TabContainer/Audio/VBoxContainer"]
margin_top = 132.0
margin_right = 413.0
margin_bottom = 214.0
rect_min_size = Vector2( 0, 82 )

[node name="Label" type="Label" parent="TabContainer/Audio/VBoxContainer/music"]
margin_right = 172.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MUSIC"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="TabContainer/Audio/VBoxContainer/music"]
margin_top = 54.0
margin_right = 413.0
margin_bottom = 82.0
min_value = -40.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="TabContainer/Audio/VBoxContainer/music"]
margin_left = 446.0
margin_top = 44.0
margin_right = 490.0
margin_bottom = 88.0
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sound" type="Control" parent="TabContainer/Audio/VBoxContainer"]
margin_top = 264.0
margin_right = 413.0
margin_bottom = 346.0
rect_min_size = Vector2( 0, 82 )

[node name="Label" type="Label" parent="TabContainer/Audio/VBoxContainer/sound"]
margin_right = 184.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SOUND"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="TabContainer/Audio/VBoxContainer/sound"]
margin_top = 54.0
margin_right = 413.0
margin_bottom = 82.0
min_value = -40.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="TabContainer/Audio/VBoxContainer/sound"]
margin_left = 446.0
margin_top = 44.0
margin_right = 490.0
margin_bottom = 88.0
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TabContainer/Audio"]
margin_left = 474.0
margin_top = 45.0
margin_right = 543.0
margin_bottom = 69.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MUTE"

[node name="Graphics" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 34.0

[node name="fullscreen" type="CheckBox" parent="TabContainer/Graphics"]
margin_left = 40.0
margin_top = 45.0
margin_right = 84.0
margin_bottom = 89.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TabContainer/Graphics/fullscreen"]
margin_left = 62.0
margin_top = 11.0
margin_right = 189.0
margin_bottom = 35.0
text = "OPT_FULLSCREEN"

[node name="Text" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 34.0

[node name="textspeed" type="HSlider" parent="TabContainer/Text"]
margin_left = 40.0
margin_top = 99.0
margin_right = 453.0
margin_bottom = 127.0
min_value = 20.0
max_value = 200.0
step = 20.0
value = 60.0

[node name="Label" type="Label" parent="TabContainer/Text/textspeed"]
margin_top = -54.0
margin_right = 136.0
margin_bottom = -30.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TEXTSPEED"

[node name="skipread" type="CheckBox" parent="TabContainer/Text"]
margin_left = 40.0
margin_top = 168.0
margin_right = 84.0
margin_bottom = 212.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TabContainer/Text/skipread"]
margin_left = 62.0
margin_top = 10.0
margin_right = 180.0
margin_bottom = 34.0
text = "SKIPREAD"

[node name="disabletut" type="CheckBox" parent="TabContainer/Text"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -253.5
margin_top = -284.0
margin_right = -209.5
margin_bottom = -240.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="TabContainer/Text/disabletut"]
margin_left = 62.0
margin_top = 12.0
margin_right = 279.0
margin_bottom = 36.0
text = "DISABLETUTORIAL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="locale" type="Control" parent="TabContainer/Text"]
margin_top = 321.0
margin_right = 580.0
margin_bottom = 402.0

[node name="Label" type="Label" parent="TabContainer/Text/locale"]
margin_left = 48.0
margin_right = 265.0
margin_bottom = 24.0
text = "OPT_LANGUAGE"

[node name="en" type="CheckBox" parent="TabContainer/Text/locale"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -250.0
margin_top = -48.0
margin_right = -206.0
margin_bottom = -4.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="TabContainer/Text/locale/en"]
margin_left = 62.0
margin_top = 12.0
margin_right = 92.0
margin_bottom = 36.0
text = "L_EN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ru" type="CheckBox" parent="TabContainer/Text/locale"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -138.0
margin_top = -48.0
margin_right = -94.0
margin_bottom = -4.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="TabContainer/Text/locale/ru"]
margin_left = 62.0
margin_top = 12.0
margin_right = 96.0
margin_bottom = 36.0
text = "L_RU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 34.0

[node name="forced" type="CheckBox" parent="TabContainer/Game"]
margin_left = 40.0
margin_top = 40.0
margin_right = 84.0
margin_bottom = 84.0
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="TabContainer/Game/forced"]
margin_left = 62.0
margin_top = 10.0
margin_right = 180.0
margin_bottom = 34.0
text = "FORCED_CONTENT"

[node name="Hotkeys" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="TabContainer/Hotkeys"]
anchor_right = 1.0
margin_top = 25.0
margin_bottom = 47.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="action" type="Label" parent="TabContainer/Hotkeys/Control"]
margin_left = 40.0
margin_right = 173.0
margin_bottom = 24.0
text = "HK_ACTION"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="default" type="Label" parent="TabContainer/Hotkeys/Control"]
margin_left = 245.0
margin_right = 399.0
margin_bottom = 24.0
text = "HK_DEFAULT"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="remap" type="Label" parent="TabContainer/Hotkeys/Control"]
margin_left = 418.0
margin_right = 549.0
margin_bottom = 24.0
text = "HK_REMAP"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="NinePatchRect" parent="TabContainer/Hotkeys/Control"]
margin_top = 38.0
margin_right = 587.0
margin_bottom = 138.0
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 579, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Hotkeys"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 74.0
margin_right = -15.0
margin_bottom = -16.0
theme = ExtResource( 11 )

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Hotkeys/ScrollContainer"]
margin_right = 562.0
margin_bottom = 682.0
size_flags_horizontal = 3
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hotkey_line" parent="TabContainer/Hotkeys/ScrollContainer/VBoxContainer" instance=ExtResource( 10 )]
margin_right = 543.0
hotkey = "hotkey_skill_1"

[node name="HSeparator" type="HSeparator" parent="TabContainer/Hotkeys/ScrollContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 543.0
margin_bottom = 54.0

[node name="hotkey_line2" parent="TabContainer/Hotkeys/ScrollContainer/VBoxContainer" instance=ExtResource( 10 )]
margin_top = 64.0
margin_right = 543.0
margin_bottom = 106.0
hotkey = "hotkey_skill_6"

[node name="HSeparator2" type="HSeparator" parent="TabContainer/Hotkeys/ScrollContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 543.0
margin_bottom = 118.0

[node name="hotkey_line3" parent="TabContainer/Hotkeys/ScrollContainer/VBoxContainer" instance=ExtResource( 10 )]
margin_top = 128.0
margin_right = 543.0
margin_bottom = 170.0
hotkey = "hotkey_skill_2"

[node name="HSeparator3" type="HSeparator" parent="TabContainer/Hotkeys/ScrollContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 543.0
margin_bottom = 182.0

[node name="hotkey_line4" parent="TabContainer/Hotkeys/ScrollContainer/VBoxContainer" instance=ExtResource( 10 )]
margin_top = 192.0
margin_right = 543.0
margin_bottom = 234.0
hotkey = "hotkey_skill_3"

[node name="HSeparator4" type="HSeparator" parent="TabContainer/Hotkeys/ScrollContainer/VBoxContainer"]
margin_top = 244.0
margin_right = 543.0
margin_bottom = 246.0

[node name="hotkey_line5" parent="TabContainer/Hotkeys/ScrollContainer/VBoxContainer" instance=ExtResource( 10 )]
margin_top = 256.0
margin_right = 543.0
margin_bottom = 298.0
hotkey = "hotkey_skill_4"

[node name="HSeparator5" type="HSeparator" parent="TabContainer/Hotkeys/ScrollContainer/VBoxContainer"]
margin_top = 308.0
margin_right = 543.0
margin_bottom = 310.0

[node name="hotkey_line6" parent="TabContainer/Hotkeys/ScrollContainer/VBoxContainer" instance=ExtResource( 10 )]
margin_top = 320.0
margin_right = 543.0
margin_bottom = 362.0
hotkey = "hotkey_skill_5"

[node name="HSeparator6" type="HSeparator" parent="TabContainer/Hotkeys/ScrollContainer/VBoxContainer"]
margin_top = 372.0
margin_right = 543.0
margin_bottom = 374.0

[node name="hotkey_line7" parent="TabContainer/Hotkeys/ScrollContainer/VBoxContainer" instance=ExtResource( 10 )]
margin_top = 384.0
margin_right = 543.0
margin_bottom = 426.0
hotkey = "hotkey_skill_7"

[node name="HSeparator7" type="HSeparator" parent="TabContainer/Hotkeys/ScrollContainer/VBoxContainer"]
margin_top = 436.0
margin_right = 543.0
margin_bottom = 438.0

[node name="hotkey_line8" parent="TabContainer/Hotkeys/ScrollContainer/VBoxContainer" instance=ExtResource( 10 )]
margin_top = 448.0
margin_right = 543.0
margin_bottom = 490.0
hotkey = "hotkey_skill_8"

[node name="HSeparator8" type="HSeparator" parent="TabContainer/Hotkeys/ScrollContainer/VBoxContainer"]
margin_top = 500.0
margin_right = 543.0
margin_bottom = 502.0

[node name="hotkey_line9" parent="TabContainer/Hotkeys/ScrollContainer/VBoxContainer" instance=ExtResource( 10 )]
margin_top = 512.0
margin_right = 543.0
margin_bottom = 554.0
hotkey = "hotkey_skill_9"

[node name="HSeparator9" type="HSeparator" parent="TabContainer/Hotkeys/ScrollContainer/VBoxContainer"]
margin_top = 564.0
margin_right = 543.0
margin_bottom = 566.0

[node name="hotkey_line10" parent="TabContainer/Hotkeys/ScrollContainer/VBoxContainer" instance=ExtResource( 10 )]
margin_top = 576.0
margin_right = 543.0
margin_bottom = 618.0
hotkey = "hotkey_skill_10"

[node name="HSeparator10" type="HSeparator" parent="TabContainer/Hotkeys/ScrollContainer/VBoxContainer"]
margin_top = 628.0
margin_right = 543.0
margin_bottom = 630.0

[node name="default" type="Control" parent="TabContainer/Hotkeys/ScrollContainer/VBoxContainer"]
margin_top = 640.0
margin_right = 543.0
margin_bottom = 682.0
rect_min_size = Vector2( 0, 42 )

[node name="Button" type="Button" parent="TabContainer/Hotkeys/ScrollContainer/VBoxContainer/default"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -202.0
margin_right = -42.0
margin_bottom = 42.0
grow_horizontal = 0
text = "HK_DEFAULT"
clip_text = true

[node name="close_button" type="TextureButton" parent="."]
margin_left = 249.0
margin_top = 681.0
margin_right = 387.0
margin_bottom = 749.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 9 )

[node name="Label" type="Label" parent="close_button"]
margin_left = 5.0
margin_top = 23.0
margin_right = 135.0
margin_bottom = 47.0
text = "CLOSE"
align = 1

[node name="Label" type="Label" parent="."]
margin_left = 217.0
margin_top = 51.0
margin_right = 390.0
margin_bottom = 75.0
text = "OPTIONS"
align = 1

[node name="remap_panel" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="remap_panel"]
margin_left = 97.0
margin_top = 182.0
margin_right = 578.0
margin_bottom = 426.0
texture = ExtResource( 12 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="remap_panel/TextureRect"]
margin_left = 33.0
margin_top = 57.0
margin_right = 445.0
margin_bottom = 213.0
text = "Please, press any button"
autowrap = true
